--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,7 +9,7 @@
 }
 html {
 	font-size: 62.5%;
-	height: 100%;
+	height: 100vh;
 }
 body {
 	font-size: 1.6rem;
@@ -18,6 +18,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
+	// height: 100vh;
 }
 .game-container {
 	margin: 0 auto;
@@ -27,7 +28,7 @@ body {
 
 .game-title {
 	text-align: center;
-	margin: 1.5em 0;
+	margin: 1em 0;
 	font-size: 3rem;
 	font-family: 'Varela Round', sans-serif;
 	text-transform: uppercase;
