Modify layout travel page

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,7 +1,7 @@
 @use 'base/base';
 @use 'base/colors';
-@use 'base/appmedia';
 @use 'base/animations';
 @use 'layout/travel';
+@use 'layout/appmedia';
 @use 'components/map';
-@use 'components/buttons';
+
