--- a/src/sass/components/_map.scss
+++ b/src/sass/components/_map.scss
@@ -1,18 +1,16 @@
+@use 'base/colors' as *;
 .map {
 	display: grid;
-	grid-template-columns: repeat(6,1fr);
-	grid-template-rows: repeat(6, 1fr);
-	
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+  
+    
 }
 .map-tile {
-    width: 100%;
-    height: 50px;
-    background: #555;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 14px;
-    border: 1px solid #333;
-    border-radius: 5px;
+	width: 100%;
+	height: 50px;
+	background: $main-color;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
