--- a/src/sass/layout/_homepage.scss
+++ b/src/sass/layout/_homepage.scss
@@ -5,7 +5,7 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 1fr 1fr;
-	
+
 	&__hero {
 		border: 1px solid $main-color;
 
@@ -33,6 +33,34 @@
 			&__item {
 				font-size: 2.6rem;
 			}
+		}
+	}
+}
+.button__actions {
+	display: flex;
+
+	align-items: center;
+	flex-direction: column;
+	&__item {
+		margin: 0.5em 0;
+		padding: 0.5em 1em;
+		width: 100%;
+		background-color: transparent;
+		border: 1px solid $main-color;
+		color: $main-color;
+		text-transform: uppercase;
+		text-decoration: none;
+		cursor: pointer;
+		font-size: 2rem;
+		text-align: center;
+	}
+}
+
+@media (min-width: 768px) {
+	.button__actions {
+		&__item {
+			font-size: 3rem;
+			width: 50%;
 		}
 	}
 }
