--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -18,8 +18,13 @@ body {
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
-
+	font-family: 'Varela Round', sans-serif;
 }
+button,
+a {
+	font-family: 'Varela Round', sans-serif;
+}
+
 .game-container {
 	margin: 0 auto;
 	width: 100%;
@@ -30,7 +35,6 @@ body {
 	text-align: center;
 	margin: 0.5em 0;
 	font-size: 3rem;
-	font-family: 'Varela Round', sans-serif;
 	text-transform: uppercase;
 	color: $main-color;
 }
