--- a/src/sass/layout/_travel.scss
+++ b/src/sass/layout/_travel.scss
@@ -71,6 +71,8 @@
 				color: $main-color;
 				font-weight: bold;
 				cursor: pointer;
+                text-align: center;
+                text-decoration: none;
 			}
 		}
 	}
