--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,7 +9,8 @@
 }
 html {
 	font-size: 62.5%;
-	height: 100vh;
+	min-height: 100%;
+	// max-height: 100%;
 }
 body {
 	font-size: 1.6rem;
@@ -17,7 +18,9 @@ body {
 	background-image: $banner-gradient, url(/dist/img/space-big.jpg);
 	background-size: cover;
 	background-position: center;
-	background-repeat: no-repeat;
+	min-height: 100%;
+	// max-height: 100%;
+	background-repeat: repeat;
 	font-family: 'Varela Round', sans-serif;
 }
 button,
