--- a/src/sass/layout/_travel.scss
+++ b/src/sass/layout/_travel.scss
@@ -46,6 +46,7 @@
 				color: $main-color;
 				font-weight: bold;
 				cursor: pointer;
+				font-size: 1.5rem;
 			}
 		}
 	}
@@ -71,8 +72,9 @@
 				color: $main-color;
 				font-weight: bold;
 				cursor: pointer;
-                text-align: center;
-                text-decoration: none;
+				text-align: center;
+				text-decoration: none;
+				font-size: 1.5rem;
 			}
 		}
 	}
