--- a/src/sass/layout/_homepage.scss
+++ b/src/sass/layout/_homepage.scss
@@ -31,6 +31,18 @@
 		gap: 1em;
 		&__hero {
 			&__item {
+				font-size: 2.4rem;
+			}
+		}
+	}
+}
+@media (min-width: 992px) {
+	.home {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr;
+		gap: 1em;
+		&__hero {
+			&__item {
 				font-size: 2.6rem;
 			}
 		}
@@ -58,6 +70,14 @@
 }
 
 @media (min-width: 768px) {
+	.button__actions {
+		&__item {
+			font-size: 2.2rem;
+			width: 50%;
+		}
+	}
+}
+@media (min-width: 992px) {
 	.button__actions {
 		&__item {
 			font-size: 3rem;
