--- a/src/sass/components/_map.scss
+++ b/src/sass/components/_map.scss
@@ -12,31 +12,34 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 1px solid black;
+	border: 1px solid $white;
 }
 
-.player {
-	background-color: blue;
-	border-radius: 50%;
+#player {
+	// background-color: blue;
+	// border-radius: 50%;
 	// font-size: 3rem;
 }
-.enemy {
-	background-color: red;
-	border-radius: 50%;
+#enemy {
+	// background-color: red;
+	// border-radius: 50%;
 }
-@media( min-width:5768px){
-	.player{
+@media (min-width: 576px) {
+	#player,
+	#enemy {
 		font-size: 2rem;
 	}
 }
 
-@media( min-width:768px){
-	.player{
+@media (min-width: 768px) {
+	#player,
+	#enemy {
 		font-size: 3rem;
 	}
 }
-@media( min-width:1200px){
-	.player{
+@media (min-width: 1200px) {
+	#player,
+	#enemy {
 		font-size: 4rem;
 	}
 }
