--- a/src/sass/components/_map.scss
+++ b/src/sass/components/_map.scss
@@ -15,31 +15,31 @@
 	border: 1px solid $white;
 }
 
-#player {
-	// background-color: blue;
-	// border-radius: 50%;
-	// font-size: 3rem;
-}
-#enemy {
-	// background-color: red;
-	// border-radius: 50%;
-}
+// .player {
+// 	// background-color: blue;
+// 	// border-radius: 50%;
+// 	// font-size: 3rem;
+// }
+// .enemy {
+// 	// background-color: red;
+// 	// border-radius: 50%;
+// }
 @media (min-width: 576px) {
-	#player,
-	#enemy {
+	.player,
+	.enemy {
 		font-size: 2rem;
 	}
 }
 
 @media (min-width: 768px) {
-	#player,
-	#enemy {
+	.player,
+	.enemy {
 		font-size: 3rem;
 	}
 }
 @media (min-width: 1200px) {
-	#player,
-	#enemy {
+	.player,
+	.enemy {
 		font-size: 4rem;
 	}
 }
