--- a/src/sass/components/_map.scss
+++ b/src/sass/components/_map.scss
@@ -5,7 +5,7 @@
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 }
-.map-tile {
+.map-block {
 	width: 100%;
 	height: 50px;
 	background: $main-color;
